force-app/main/default/objects/Plan_de_estudios__c/Plan_de_estudios__c.object-meta.xml
<CustomObject>
    <label>Plan de estudios</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Plan de estudios</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planes de estudios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>