force-app/main/default/objects/Plan_de_estudios__c/fields/Anio_en_curso__c.field-meta.xml
<CustomField>
    <fullName>Anio_en_curso__c</fullName>
    <label>Año lectivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5°</fullName>
            </value>
            <value>
                <fullName>6°</fullName>
            </value>
            <value>
                <fullName>7°</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>