force-app/main/default/objects/Plan_de_estudios__c/fields/Escuela__c.field-meta.xml
<CustomField>
    <fullName>Escuela__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Escuela</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Debe seleccionar una escuela</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Escuela</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Planes de estudios</relationshipLabel>
    <relationshipName>Planes_de_estudios</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>