force-app/main/default/objects/Plan_de_estudios__c/fields/Materia__c.field-meta.xml
<CustomField>
    <fullName>Materia__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Materia</label>
    <referenceTo>Materia__c</referenceTo>
    <relationshipLabel>Planes de estudios</relationshipLabel>
    <relationshipName>Planes_de_estudios</relationshipName>
    <type>Lookup</type>
</CustomField>